[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/System/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/System/HUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/Themes/Button_theme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/System/Game_over_screen.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/SFX/rollover2.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Objects/Life.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/System/Beat_tracker.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beat_tracker" parent="HUD" instance=ExtResource( 8 )]

[node name="Life_Container" type="HBoxContainer" parent="HUD"]
margin_left = 36.0
margin_top = 25.0
margin_right = 204.0
margin_bottom = 153.0
custom_constants/separation = 141
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" parent="HUD/Life_Container" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 128.0

[node name="Life2" parent="HUD/Life_Container" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 141.0
margin_right = 141.0
margin_bottom = 128.0

[node name="Life3" parent="HUD/Life_Container" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 282.0
margin_right = 282.0
margin_bottom = 128.0

[node name="RichTextLabel" type="RichTextLabel" parent="HUD"]
margin_left = 1743.0
margin_top = 51.0
margin_right = 1843.0
margin_bottom = 151.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 100, 100 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_over_screen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="Game_over_screen"]
margin_left = 697.0
margin_top = 245.0
margin_right = 1297.0
margin_bottom = 445.0
rect_min_size = Vector2( 200, 200 )
custom_fonts/normal_font = SubResource( 3 )
text = "Final Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Game_over_screen"]
margin_left = 680.0
margin_top = 734.0
margin_right = 820.0
margin_bottom = 764.0
rect_min_size = Vector2( 140, 30 )
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 4 )
text = "Retry"

[node name="Image_node" type="Node2D" parent="."]
scale = Vector2( 4, 4 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Click_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 1639.0
margin_top = 174.0
margin_right = 1679.0
margin_bottom = 214.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}
